# Monocle

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  plan.md  vitest.config.ts
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
release-assets/: Monocle_0.2.12_x64-setup.exe.sig  Monocle_0.3.0_x64-setup.exe.sig  Monocle_0.3.1_x64-setup.exe.sig  Monocle_aarch64.app.tar.gz.sig  Monocle_x86_64.app.tar.gz.sig  latest.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  state.rs
src-tauri/src/commands/: connections.rs  databases.rs  dsn.rs  explorer.rs  menu.rs  mock.rs  mod.rs  schema.rs  settings.rs
src-tauri/src/db/: connection.rs  mod.rs  queries.rs  schema_loader.rs  ssrp.rs
src-tauri/src/types/: schema.rs
src-tauri/src/validation/: encoding.rs  mod.rs  validator.rs
src/components/: about-dialog.tsx  app-settings-sheet.tsx  connection-form.tsx  mock-data-modal.tsx  search-bar.tsx  settings-sheet.tsx  status-bar.tsx  toast-container.tsx  toolbar.tsx  update-checker.tsx
src/constants/: edge-colors.ts
src/hooks/: use-menu-events.ts  use-resolved-theme.ts  useAppVersion.ts  useFilteredCounts.ts
src/lib/: monaco-sql-loader.ts  monaco-xml-loader.ts  schema-index.test.ts  schema-index.ts  search-utils.ts  sql-intellisense.test.ts  sql-intellisense.ts
src/providers/: theme-provider.tsx
(+279 files in other folders)
