[package]
name = "monocle"
version = "0.2.13"
description = "SQL Server Schema Visualizer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "monocle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time", "net"] }
tiberius = { version = "0.12", default-features = false, features = ["rustls", "winauth"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
